[package]
name = "calculator"
version = "0.1.0"
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "parser"]

[dependencies]
calculator-parser = {path = "parser", version = "0.1.0"}
