[package]
name = "instant-parser"
version = "0.1.0"
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.0"

[build-dependencies]
lalrpop = "0.17.2"
